--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -103,3 +103,21 @@ body {
     font-size: 3vw;
     cursor: pointer;
 }
+
+/* Game over screen styles */
+#game-over-screen {
+    display: none;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#game-over-heading {
+    font-size: 5vw;
+}
+
+#game-over-screen button {
+    margin-top: 1vw;
+}
