--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -105,12 +105,24 @@ body {
 }
 
 /* Game over screen styles */
+
 #game-over-screen {
     display: none;
     width: 100%;
     height: 100%;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+#game-over-navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
 }
 
