--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,6 +15,10 @@ body {
     height: 100vh;
 }
 
+.main-menu-button {
+    margin-top: 1vw;
+}
+
 /* Title screen styles */
 
 #title-screen {
@@ -28,15 +32,20 @@ body {
 
 #title-screen #heading {
     font-size: 5vw;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
 }
 
 #title-screen input {
     padding: 0.5vw;
     margin-top: 2vw;
+    font-family: 'Roboto', sans-serif;
 }
 
 #title-screen button {
     margin-top: 1vw;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
 }
 
 /* Waiting screen styles */
@@ -48,6 +57,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Roboto', sans-serif;
+}
+
+#waiting-heading {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
 }
 
 /* Game screen styles */
@@ -94,7 +109,7 @@ body {
 }
 
 .game-board-cell {
-    border: 0.1vw solid black;
+    border: 0.2vw solid black;
     height: 10vw;
     width: 10vw;
     display: flex;
@@ -102,6 +117,25 @@ body {
     justify-content: center;
     font-size: 3vw;
     cursor: pointer;
+    margin: 0.2vw;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 900;
+}
+
+#box-1 {
+    border-radius: 3vw 0 0 0;
+}
+
+#box-3 {
+    border-radius: 0 3vw 0 0;
+}
+
+#box-7 {
+    border-radius: 0 0 0 3vw;
+}
+
+#box-9 {
+    border-radius: 0 0 3vw 0;
 }
 
 /* Game over screen styles */
@@ -115,21 +149,8 @@ body {
     align-items: center;
 }
 
-#game-over-navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 10%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
 #game-over-heading {
     font-size: 5vw;
-}
-
-#game-over-screen button {
-    margin-top: 1vw;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
 }
